--- a/Index.html
+++ b/Index.html
@@ -16,6 +16,10 @@
 <body>
     <h1>This is</h1>
     <h1>Mozahid Akash Portfolio</h1>
+    <h3>This is Mozahid Akash</h3>
+    <p>Assalamu Alaikum. I am Mozahid Akash. I believe that you like this portfolio. This is my first work with html and
+        css. If you iterested to hire me. You can go my linkedin profile.</p>
+    <a target="blank" href="https://www.linkedin.com/in/mozahid-akash-bb369b1a5/"></a>
 
 </body>
 
