--- a/Index.html
+++ b/Index.html
@@ -9,17 +9,26 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css.css">
 
 </head>
 
 <body>
-    <h1>This is</h1>
-    <h1>Mozahid Akash Portfolio</h1>
-    <h3>This is Mozahid Akash</h3>
-    <p>Assalamu Alaikum. I am Mozahid Akash. I believe that you like this portfolio. This is my first work with html and
-        css. If you iterested to hire me. You can go my linkedin profile.</p>
-    <a target="blank" href="https://www.linkedin.com/in/mozahid-akash-bb369b1a5/"></a>
+    <section class="top-section">
+        <div class="half-width">
+            <h1 class="h1">Welcome To</h1>
+            <h1 class="h1"><span class="name">Mozahid Akash</span> Portfolio!</h1>
+            <h3 class="h3">This is Mozahid Akash</h3>
+            <p>Assalamu Alaikum. I am Mozahid Akash. I believe that you like this portfolio. This is my first work with
+                html
+                and
+                css. If you iterested to hire me. You can go my linkedin profile.</p>
+            <a class="anchor" target="blank" href="https://www.linkedin.com/in/mozahid-akash-bb369b1a5/"> Linkedin </a>
+        </div>
+
+        <div class="half-width"><img src="my-bg2.png" alt="This is picture of Mozahid Akash">
+        </div>
+    </section>
 
 </body>
 
