--- a/Index.html
+++ b/Index.html
@@ -29,6 +29,19 @@
         <div class="half-width"><img src="my-bg2.png" alt="This is picture of Mozahid Akash">
         </div>
     </section>
+    <section class="midsection">
+        <div>
+            <img src="my-bg.png" alt="Picture of Mozahid Akash">
+        </div>
+        <div>
+            <h1 class="Dreamhead">My Dream</h1>
+            <h3 class="Dreamparagraph">Become a web Devoloper</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
+                to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+
+
+        </div>
+    </section>
 
 </body>
 
