--- a/Index.html
+++ b/Index.html
@@ -38,9 +38,38 @@
             <h3 class="Dreamparagraph">Become a web Devoloper</h3>
             <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
                 to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
-
+            <a class="anchor" href="">Download Resume</a>
 
         </div>
+    </section>
+    <section>
+        <div>
+
+        </div>
+    </section>
+
+    <section>
+        <h1 class="ex-title">Experiences</h1>
+        <div class="ex-box">
+            <div id="fswd">
+                <h1 class="title">
+                    Full Stack Web Developer
+                </h1>
+                <h3> 2021-Present | Pro Level Developer</h3>
+                <p> I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue
+                    JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div id="bwd">
+                <h1 class="title">Baby Web Developer</h1>
+                <h3>2020-2021 | Programming Hero Learner </h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed
+                    it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
+        </div>
+
     </section>
 
 </body>
